[package]
name = "kosa-interface"
version = "0.1.0"
edition = "2021"
authors = ["ololoshka2871"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
bytes = { version = "1", default-features = false }
futures = "0.3"
tokio-modbus = { version = "0.5",  default-features = false, features = ["rtu", "sync"] }

