[package]
name = "kosa-interface"
version = "0.4.0"
edition = "2021"
authors = ["ololoshka2871"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
bytes = { version = "1", default-features = false }
futures = "0.3"
clap = { version = "4.2", features = ["derive"] }

[lib]
name = "kosa_interface"

# also for examples
[dev-dependencies]
serde_json = "1.0"